--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div id="cvdiv">
-            <a href="Swapnajit-Resume.pdf" download id="cvbtn"> Download CV <i class="fa fa-download"></i> </a>
+            <a href="Swapnajit_Resume.pdf" download id="cvbtn"> Download CV <i class="fa fa-download"></i> </a>
         </div>
         <div class="skillmain">
             <h2> Technical Skills </h2>
