--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div>
                 <i class="fa fa-envelope"></i>
                 <p> E-Mail </p>
-                <p> swapnajit@gmail.com </p>
+                <a href="mailto:swapnajitroul@gmail.com">  <p> Swapnajit462150 </p> </a> 
             </div>
             <div>
                 <i class="fab fa-github"></i>
