--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="shortcut icon"  href="IMG_20231127_151243.jpg">
+    <link rel="shortcut icon"  href="/image/IMG_20231127_151243.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjit-Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -44,7 +44,7 @@
         </div>
         <div class="photo">
             <div class="pic">
-                <img src="IMG_20231127_151243.jpg" alt="">
+                <img src="/image/IMG_20231127_151243.jpg" alt="">
             </div>
         </div>
     </div>
