--- a/index.html
+++ b/index.html
@@ -89,51 +89,51 @@
             <h2> Technical Skills </h2>
             <div id="skills">
                 <div class="skill">
-                    <img src="Html1.png" alt="">
+                    <img src="./image/Html1.png" alt="">
                     <p> HTML </p>
                 </div>
                 <div class="skill">
-                    <img src="css.png" alt="">
+                    <img src="./image/css.png" alt="">
                     <p> CSS </p>
                 </div>
                 <div class="skill">
-                    <img src="bootstrap.png" alt="">
+                    <img src="./image/bootstrap.png" alt="">
                     <p> BOOTSTRAP </p>
                 </div>
                 <div class="skill">
-                    <img src="javascript.png" alt="">
+                    <img src="./image/javascript.png" alt="">
                     <p> JAVASCRIPT </p>
                 </div>
                 <div class="skill">
-                    <img src="react.png" alt="">
+                    <img src="./image/react.png" alt="">
                     <p> REACT </p>
                 </div>
                 <div class="skill">
-                    <img src="reactrouter.png" alt="">
+                    <img src="./image/reactrouter.png" alt="">
                     <p> ROUTER DOM </p>
                 </div>
                 <div class="skill">
-                    <img src="clang.png" alt="">
+                    <img src="./image/clang.png" alt="">
                     <p> C LANGUAGE</p>
                 </div>
                 <div class="skill">
-                    <img src="cpp.jpeg" alt="">
+                    <img src="./image/cpp.jpeg" alt="">
                     <p> C ++ </p>
                 </div>
                 <div class="skill">
-                    <img src="nodejs.png" alt="">
+                    <img src="./image/nodejs.png" alt="">
                     <p> NODE JS </p>
                 </div>
                 <div class="skill">
-                    <img src="ex.png" alt="">
+                    <img src="./image/ex.png" alt="">
                     <p> EXPRESS JS </p>
                 </div>
                 <div class="skill">
-                    <img src="mongo.webp" alt="">
+                    <img src="./image/mongo.webp" alt="">
                     <p> MONGODB </p>
                 </div>
                 <div class="skill">
-                    <img src="mernstack.png" alt="">
+                    <img src="./image/mernstack.png" alt="">
                     <p> MERN </p>
                 </div>
 
@@ -151,8 +151,8 @@
         <h2 id="projecth3"> Live Project </h2>
         <div class="liveproject">
             <div id="projectphoto">
-                <div id="easytohirepic"> <img src="Screenshot (15).png" alt="" height="100%" width="100%"></div>
-                <div> <img src="Screenshot (16).png" alt="" height="100%" width="100%"> </div>
+                <div id="easytohirepic"> <img src="./image/Screenshot (15).png" alt="" height="100%" width="100%"></div>
+                <div> <img src="./image/Screenshot (16).png" alt="" height="100%" width="100%"> </div>
             </div>
             <h2> Project Name : easytohire.in(Job Portal) </h2>
             <h3> Technoligeis : Visual Studio React.js </h3>
@@ -162,13 +162,13 @@
         <h2 id="miniprojecth"> Mini Projects</h2>
         <div>
             <div id="scorediv">
-                <div> <img src="Screenshot (17).png" alt="" height="100%" width="100%"></div>
+                <div> <img src="./image/Screenshot (17).png" alt="" height="100%" width="100%"></div>
                 <h2> Scoreboard App </h2>
                 <h3> Technoligeis : Visual Studio React.js </h3>
                 <p> This is a badminton scoreboard where user can count their score and can save the result and also can
                     see the result history.</p>
             </div> <div id="scorediv">
-                <div> <img src="Screenshot (28).png" alt="" height="100%" width="100%"></div>
+                <div> <img src="./image/Screenshot (28).png" alt="" height="100%" width="100%"></div>
                 <h2> Pg Register App </h2>
                 <h3> Technoligeis : Visual Studio React.js </h3>
                 <p> This is a Pg register where we can keep record of all the guests stay in the pg including their name,mobile no,Aadhar no.</p>
@@ -176,7 +176,7 @@
             <div class="miniproject">
                 <div id="minidiv1">
                     <div>
-                        <img src="Screenshot (19).png" alt="" height="100%" width="100%">
+                        <img src="./image/Screenshot (19).png" alt="" height="100%" width="100%">
                     </div>
                     <h3> English Dectionary </h3>
                     <h3> Technoligeis : Visual Studio Javascript </h3>
@@ -185,7 +185,7 @@
                 </div>
                 <div id="minidiv2">
                     <div>
-                        <img src="Screenshot (18).png" alt="" height="100%" width="100%">
+                        <img src="./image/Screenshot (18).png" alt="" height="100%" width="100%">
                     </div>
                     <h3> Recipe App </h3>
                     <h3> Technoligeis : Visual Studio Javascript </h3>
@@ -200,7 +200,7 @@
                 <div class="miniproject">
                     <div id="minidiv1">
                         <div>
-                            <img src="Screenshot (20).png" alt="" height="100%" width="100%">
+                            <img src="./image/Screenshot (20).png" alt="" height="100%" width="100%">
                         </div>
                         <h3> Live Weather </h3>
                         <h3> Technoligeis : Visual Studio Javascript </h3>
@@ -209,7 +209,7 @@
                     </div>
                     <div id="minidiv2">
                         <div>
-                            <img src="Screenshot (25).png" alt="" height="100%" width="100%">
+                            <img src="./image/Screenshot (25).png" alt="" height="100%" width="100%">
                         </div>
                         <h3> To-Do-List </h3>
                         <h3> Technoligeis : Visual Studio Javascript </h3>
@@ -220,7 +220,7 @@
                 <div class="miniproject">
                     <div id="minidiv1">
                         <div>
-                            <img src="Screenshot (26).png" alt="" height="100%" width="100%">
+                            <img src="./image/Screenshot (26).png" alt="" height="100%" width="100%">
                         </div>
                         <h3> Qr-Code-Generator </h3>
                         <h3> Technoligeis : Visual Studio Javascript </h3>
@@ -229,7 +229,7 @@
                     </div>
                     <div id="minidiv2">
                         <div>
-                            <img src="Screenshot (27).png" alt="" height="100%" width="100%">
+                            <img src="./image/Screenshot (27).png" alt="" height="100%" width="100%">
                         </div>
                         <h3> Tic-Tac-Toe Game </h3>
                         <h3> Technoligeis : Visual Studio Javascript </h3>
