--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="intro">
             <div class="introtext">
                 <h1> Hello, I am Swapnajit </h1>
-                <h2><span> A Front-End Dveloper </span></h2>
+                <h2><span> A MERN-STACK Dveloper </span></h2>
                 <h2><span> & Freelancer </span> From Bangalore</h2>
                 <p> With a vision to create user-friendly websites based on clint's demand.</p>
             </div>
